import {SetElement} from "./setElement-model";

interface Set {
    title: String;
    description: String;
    isPublic: boolean;
    content: SetElement[];
}

export {Set}
