interface SetElement {
    word: String;
    definition: String;
}

export {SetElement}
