import {Set} from "./set-model";

interface User {
    email: String;
    password: String;
    sets: Set[];
}

export {User}
