@startuml
'https://plantuml.com/class-diagram

class User {
    - email: String
    - password: String
    - sets: Set[]
}

class Set {
    - title: String
    - description: String
    - isPublic: boolean
    - content: SetElement[]
}

class SetElement {
    - word: String
    - definition: String
}


Set "*" -- "1" User
Set "1" -- "*" SetElement

@enduml